--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "@emotion/styled": "^11.10.5",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "animate.css": "^4.1.1",
     "framer-motion": "^8.2.4",
     "react": "^18.2.0",
+    "react-animation-on-scroll": "^5.1.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
     "react-scripts": "5.0.1",
