--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@emotion/styled": "^11.10.5",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "@types/styled-components": "^5.1.26",
     "animate.css": "^4.1.1",
     "framer-motion": "^8.2.4",
     "react": "^18.2.0",
@@ -17,6 +18,7 @@
     "react-icons": "^4.7.1",
     "react-scripts": "5.0.1",
     "react-typed": "^1.2.0",
+    "styled-components": "^5.3.6",
     "typescript": "^4.4.2"
   },
   "scripts": {
