--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-animation-on-scroll": "^5.1.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
+    "react-router-dom": "^6.22.1",
     "react-scripts": "5.0.1",
     "react-typed": "^1.2.0",
     "styled-components": "^5.3.6",
