--- a/.github/workflows/hugo.yaml
+++ b/.github/workflows/hugo.yaml
@@ -50,6 +50,10 @@ jobs:
         uses: actions/configure-pages@v5
       - name: Install Node.js dependencies
         run: "[[ -f package-lock.json || -f npm-shrinkwrap.json ]] && npm ci || true"
+      - name: Get Theme
+        run: git submodule update --init --recursive
+      - name: Update theme to Latest commit
+        run: git submodule update --remote --merge     
       - name: Build with Hugo
         env:
           HUGO_CACHEDIR: ${{ runner.temp }}/hugo_cache
@@ -59,7 +63,8 @@ jobs:
           hugo \
             --gc \
             --minify \
-            --baseURL "https://julian-patterson.github.io/"          
+            --baseURL "https://julian-patterson.github.io/" \
+            --t PaperMod
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
