--- a/.github/workflows/hugo.yaml
+++ b/.github/workflows/hugo.yaml
@@ -64,7 +64,7 @@ jobs:
             --gc \
             --minify \
             --baseURL "https://julian-patterson.github.io/" \
-            --t PaperMod
+            --theme PaperMod
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
