--- a/config.yaml
+++ b/config.yaml
@@ -1,4 +1,4 @@
-baseURL: https://example.org/
+baseURL: https://julianpatterson.ca/
 languageCode: en-us
 title: julian.patterson
 theme: "PaperMod"
